--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-   <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: rgb(49, 90, 68);">
+   <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: rgb(49, 90, 68); position: fixed; width:100% ;">
   <div class="container d-flex justify-content-between align-items-center">
     <!-- Logo -->
     <!-- <a class="navbar-brand" href="#">
@@ -76,7 +76,7 @@
 
     <!-- Home Page Video Background -->
     <div class="video-landingpage">
-      <div class="video-container" style="background-image: url(asset/contentvideo.gif); height: 100vh; background-repeat: no-repeat; background-size: cover; filter: brightness(40%); background-position: center; margin-top: -10px;">
+      <div class="video-container" style="background-image: url(asset/contentvideo.gif); height: 100vh; background-repeat: no-repeat; background-size: cover; filter: brightness(40%); background-position: center;">
       </div>
     </div>
 
