--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
           <a class="nav-link px-3" href="#about" style="color: rgb(239, 239, 239); ">— Nyarik Kopi —</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link px-3" href="#" style="color: rgb(239, 239, 239);" >Menu</a>
+          <a class="nav-link px-3" href="#about" style="color: rgb(239, 239, 239);" >Menu</a>
         </li>
         <!-- Order Now Button for Mobile -->
         <li class="nav-item d-lg-none">
