--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 </iframe>
               </div>
             </div>
-            <p class="py-5">&copy; Copyright by Jaya Andika</p>
+            <p class="py-5">&copy; Copyright by Jukut Premium</p>
           </div>
         </footer>
         
